# ieee-chess

./: .gitattributes  .gitignore  .python-version  README.md  data_loader.py  ensemble_baseline.py  evaluate.py  leela_board.py  leela_utils.py  maia_utils.py  prepare_data.py  pyproject.toml  regression_baseline.py  scheduler.py  utils.py
experiment_models/1300_test/: 1300_test.best.ckpt
models/: maia-1300.onnx  maia-1500.onnx  maia-1700.onnx
